--- a/src/app/first/first.component.html
+++ b/src/app/first/first.component.html
@@ -1,5 +1,6 @@
 <p #monParagraphe (click)="sayCc(monParagraphe)">first works!</p>
-<si2-second></si2-second>
 <div
   [style.backgroundColor]="color"
   [hidden]="isHidden">cc</div>
+<app-color [defaultColor]="'green'"></app-color>
+<app-color></app-color>
