--- a/src/app/fils/fils.component.html
+++ b/src/app/fils/fils.component.html
@@ -5,3 +5,9 @@ la couleur de mon père est : {{couleurPere}}
 <div [style.backgroundColor]="couleurPere">
   Je suis le fils
 </div>
+
+<button
+  (click)="sendMyColor()"
+  class="btn btn-primary">
+  Color My dad with my favorite color
+</button>
