--- a/src/app/pere/pere.component.html
+++ b/src/app/pere/pere.component.html
@@ -1,7 +1,11 @@
-<p>pere works!</p>
+<p
+   [style.backgroundColor]="color"
+>pere works!</p>
 je suis le pere voici ma couleur
 <input type="text" class="form-control" [(ngModel)]="color">
 
 <hr>
 
-<app-fils (sendData)="processSonMessage($event)" [couleurPere]="color"></app-fils>
+<app-fils
+  (sendFavoriteColor)="getSonFavoriteColor($event)"
+  (sendData)="processSonMessage($event)" [couleurPere]="color"></app-fils>
