--- a/src/app/cv/cv/cv.component.html
+++ b/src/app/cv/cv/cv.component.html
@@ -1,3 +1,6 @@
+<div class="alert alert-primary">
+  Bonjour Nous sommes le {{dateDuJour|date:"fullDate"|uppercase}}
+</div>
 <div class="row">
   <div class="col-md-6">
     <app-list (selectPersonne)="onSelectPersonne($event)"></app-list>
