--- a/src/app/cv/item/item.component.html
+++ b/src/app/cv/item/item.component.html
@@ -2,7 +2,7 @@
 <li class="list-group-item"
   (click)="sendPersonne()"
 >
-  <img src="assets/images/{{personne?.path}}"
+  <img src="assets/images/{{personne?.path|defaultImage}}"
        alt="{{personne.name}}"
        width="50px"
        height="50px"
