--- a/src/app/cv/list/list.component.html
+++ b/src/app/cv/list/list.component.html
@@ -1,11 +1,8 @@
 <ol class="list-group">
 <!--  Nous applons le item component et nous lui passons la personne à afficher-->
   <app-item
-    [personne]="personnes[0]"
-    (selectPersonne)="forwardPersonne($event)"
-  ></app-item>
-  <app-item
-    [personne]="personnes[1]"
+    *ngFor="let personne of personnes"
+    [personne]="personne"
     (selectPersonne)="forwardPersonne($event)"
   ></app-item>
 </ol>
