Activated Route et squelette exercice detail personne

--- a/src/app/cv/cv/cv.component.html
+++ b/src/app/cv/cv/cv.component.html
@@ -10,5 +10,8 @@
   </div>
 </div>
 <div class="row">
+  <button (click)="goToTodo()" class="btn btn-dark">
+    Go To Todo
+  </button>
   <app-embauche></app-embauche>
 </div>
