Children and routing

--- a/src/app/cv/detail/detail.component.html
+++ b/src/app/cv/detail/detail.component.html
@@ -55,6 +55,10 @@
           <button (click)="embaucher()" class="btn btn-primary">
             Embaucher
           </button>
+          <button (click)="detail()" class="btn btn-primary">
+            Détails
+          </button>
+
         </div>
       </div>
     </div> <!-- end back panel -->
