--- a/src/app/cv/detail-personne/detail-personne.component.html
+++ b/src/app/cv/detail-personne/detail-personne.component.html
@@ -2,9 +2,9 @@
   <div class="col-lg-8 push-lg-4">
     <div class="tab-content p-b-3">
       <div class="tab-pane active" id="profile">
-        <h4 class="m-y-2">Cv Flen Foulani</h4>
+        <h4 class="m-y-2">Cv {{personne.firstname}} {{personne.name}}</h4>
         <div class="d-flex justify-content-center">
-          <img width="150px" height="150px" class="rounded-circle align-content-center" src="assets/images/" alt="">
+          <img width="150px" height="150px" class="rounded-circle align-content-center" src="assets/images/{{personne.path| defaultImage}}" alt="">
         </div>
         <div class="row">
           <div class="col-md-12">
@@ -13,33 +13,34 @@
               <tbody>
               <tr>
                 <td>
-                  <strong>Name</strong>
+                  <strong>Name</strong> : {{personne.name}}
                 </td>
               </tr>
               <tr>
                 <td>
-                  <strong>Firstname</strong>
+                  <strong>Firstname</strong> : {{personne.firstname}}
                 </td>
               </tr>
               <tr>
                 <td>
-                  <strong>Job</strong>
+                  <strong>Job</strong> :  {{personne.job}}
                 </td>
               </tr>
               <tr>
                 <td>
-                  <strong>Age</strong>
+                  <strong>Age</strong> :  {{personne.age}}
                 </td>
               </tr>
               <tr>
                 <td>
-                  <strong>Cin</strong>
+                  <strong>Cin</strong> : {{personne.cin}}
                 </td>
               </tr>
               </tbody>
             </table>
             <div class="d-flex justify-content-center">
               <button
+                (click)="delete()"
                 class="btn btn-danger" >
                 Delete
               </button>
