--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,6 +24,11 @@
            routerLinkActive="active"
            [routerLink]="['todo']">Todo</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link"
+           routerLinkActive="active"
+           [routerLink]="['login']">Login</a>
+      </li>
     </ul>
   </div>
 </nav>
