--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,9 +1,9 @@
 /*.ng-valid {*/
 /*  border: #05AE0E solid 2px;*/
 /*}*/
-/*.ng-invalid {*/
-/*  border: red solid 2px;*/
-/*}*/
+input.ng-invalid.ng-touched {
+  border: red solid 2px;
+}
 /*.ng-touched {*/
 /*  border: gold solid 2px;*/
 /*}*/
