--- a/src/app/observable/observable.component.html
+++ b/src/app/observable/observable.component.html
@@ -1,1 +1,12 @@
 <p>observable works!</p>
+<img
+  height="150px"
+  width="150px"
+  class="rounded-circle"
+  src="assets/images/{{path}}" alt="{{path}}">
+
+<img
+  height="200px"
+  width="200px"
+  class="rounded-circle"
+  src="assets/images/{{imgObservable|async}}" alt="image">
