--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<form #loginForm="ngForm">
+<form #loginForm="ngForm" class="mt-2">
   Email :
   <input
     #emailControl="ngModel"
@@ -7,7 +7,7 @@
     type="text"
     email
     required
-    class="form-control">
+    class="form-control mt-2 mb-2">
 <div
   *ngIf="!emailControl.valid&& emailControl.touched"
   class="alert alert-danger">
@@ -21,7 +21,7 @@
     required
     minlength="4"
     name="password"
-    class="form-control"
+    class="form-control mt-2 mb-2"
   >
   <div
     *ngIf="!pwdControl.valid&& pwdControl.touched"
@@ -31,7 +31,7 @@
   <button
     [disabled]="loginForm.invalid"
     (click)="login(loginForm)"
-    class="btn btn-primary">
+    class="btn btn-primary mt-2">
     Login
   </button>
   <div class="alert alert-danger" *ngIf="errorMessage.length">
